[tool.poetry]
name = "mustree_sweetsuit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.3"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
pytz = "^2024.2"
rembg = "^2.0.59"
numba = "^0.60.0"
torch = "^2.5.0"
torchvision = "^0.20.0"
matplotlib = "^3.9.2"
ultralytics = "^8.3.23"
tensorflow = "^2.18.0"
pyntcloud = "^0.3.1"
plyfile = "^1.1"
python-multipart = "^0.0.16"
aiofiles = "^24.1.0"
tqdm = "^4.66.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
